Fix alignment of zsh command.

--- a/stylesheets/_zsh.scss
+++ b/stylesheets/_zsh.scss
@@ -3,6 +3,8 @@
   margin: auto;
   color:  $base00;
   font-family: Consolas, Menlo, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+  overflow: hidden;
+  white-space: nowrap;
 
   &:before {
     content: "$ ";
